concord_examples/tests/ui/unscoped_reference.stderr
error: ep.* is not allowed here
 --> tests/ui/unscoped_reference.rs:7:19
  |
7 |             "x" = token // ERROR: unscoped
  |                   ^^^^^
